Added new Icons and overworked the overview pages

--- a/html_pages/Mitmachen.html
+++ b/html_pages/Mitmachen.html
@@ -1,22 +1,38 @@
 <p><strong>Was macht die Genossenschaft?</strong><br /> Die HEG Heidelberger Energiegenossenschaft eG bietet Ihnen Raum, aktiv den Wandel zum Zeitalter der regenerativen Energieversorgung mitzugestalten und zu unterstützen. In einem Netzwerk interessierter und engagierter Bürger wird jedem die Möglichkeit gegeben, sich einzubringen und von den gebündelten Kompetenzen zu profitieren. Auf diese Weise kann Nachhaltigkeit und Klimaschutz gemeinsam gelebt werden, wobei nicht zuletzt das gute Gefühl bleibt, sich für eine gute und wichtige Sache eingesetzt zu haben. Zusätzlich fördern wir ein Wiederaufforstungsprojekt im brasilianischen Regenwald.</p>
 <p> </p>
 <p><strong>Mitmachen können Sie bei uns auf unterschiedliche Weise:</strong></p>
-<p><strong> </strong></p>
-<p><a href="contact/18-mitmachen/60-Mitgliedwerden"><img style="float: left;" src="images/mitgliedwerden-neu.png" width="40%" /></a></p>
-<p><a href="contact/18-mitmachen/60-Mitgliedwerden"><strong>Mitglied werden</strong></a></p>
-<p>Werden Sie Miteigentümer von 17 Bürgersolaranlagen, bestimmen Sie den weiteren Kurs der Heidelberger Energiegenossenschaft aktiv mit, unterstützen Sie die Energiewende in unserer Region: werden Sie Mitglied in der Heidelberger Energiegenossenschaft!</p>
-<p><a href="contact/18-mitmachen/60-Mitgliedwerden">Mehr Informationen</a></p>
-<p> </p>
-<p> </p>
-<p><a href="buergerstrom"><img style="float: left;" src="images/strombeziehen.png" width="40%" /></a></p>
-<p><a href="buergerstrom"><strong>Heidelberger Bürgerstrom beziehen</strong></a></p>
-<p>Werden Sie Teil unserer Erzeuger-Verbraucher-Gemeinschaft und beziehen auch Sie Heidelberger Bürgerstrom. Damit stärken Sie die Energiewende vor Ort und bekommen einen authentischen und qualitativ hochwertigen Ökostrom zu fairen Konditionen.</p>
-<p><a href="buergerstrom">Mehr Informationen</a></p>
-<p> </p>
-<p> </p>
-<p><a href="contact/18-mitmachen/62-Beteiligen"><img style="float: left;" src="images/Projektbeteiligung.png" width="40%" /></a></p>
-<p><a href="contact/18-mitmachen/62-Beteiligen"><strong>Beteiligung an Projekten</strong></a></p>
-<p>Sie können sich mit einem Darlehen direkt an Projekten der Heidelberger Energiegenossenschaft beteiligen. Alle unsere bisherigen Projekte wurden komplett von Bürgerinnen und Bürgern finanziert und diesen Weg möchten wir weiter beschreiten. Wenn Sie Interesse an einer Beteiligung haben, nehmen wir Sie gerne als Mitglied unserer Genossenschaft auf. Im Anschluss können Sie sich an unseren Projekten finanziell und ideell beteiligen.</p>
-<p><a href="contact/18-mitmachen/62-Beteiligen">Mehr Informationen</a></p>
-<p> </p>
+
+<div class="row" style="margin-bottom: 5em;">
+    <div class="span4">
+        <a href="mitmachen/mitglied-werden"><img src="images/images/page_icons/icon_mitglied_werden.jpg" /></a>
+    </div>
+
+    <div class="span7 offset1">
+        <h5><a href="mitmachen/mitglied-werden">Mitglied werden</a></h5>
+        <p style="font-size: small;">Werden Sie Miteigentümer von 17 Bürgersolaranlagen, bestimmen Sie den weiteren Kurs der Heidelberger Energiegenossenschaft aktiv mit, unterstützen Sie die Energiewende in unserer Region: werden Sie Mitglied in der Heidelberger Energiegenossenschaft!</p>
+    </div>
+</div>
+
+<div class="row" style="margin-bottom: 5em;">
+    <div class="span4">
+        <a href="mitmachen/buergerstrom-beziehen"><img src="images/images/page_icons/icon_buergerstrom_beziehen.jpg" /></a>
+    </div>
+
+    <div class="span7 offset1">
+        <h5><a href="mitmachen/buergerstrom-beziehen">Heidelberger Bürgerstrom beziehen</a></h5>
+        <p style="font-size: small;">Werden Sie Teil unserer Erzeuger-Verbraucher-Gemeinschaft und beziehen auch Sie Heidelberger Bürgerstrom. Damit stärken Sie die Energiewende vor Ort und bekommen einen authentischen und qualitativ hochwertigen Ökostrom zu fairen Konditionen.</p>
+    </div>
+</div>
+
+<div class="row" style="margin-bottom: 5em;">
+    <div class="span4">
+        <a href="mitmachen/projektbeteiligung"><img src="images/images/page_icons/icon_beteiligung.jpg" /></a>
+    </div>
+
+    <div class="span7 offset1">
+        <h5><a href="mitmachen/projektbeteiligung">Beteiligung an Projekten</a></h5>
+        <p style="font-size: small;">Sie können sich mit einem Darlehen direkt an Projekten der Heidelberger Energiegenossenschaft beteiligen. Alle unsere bisherigen Projekte wurden komplett von Bürgerinnen und Bürgern finanziert und diesen Weg möchten wir weiter beschreiten. Wenn Sie Interesse an einer Beteiligung haben, nehmen wir Sie gerne als Mitglied unserer Genossenschaft auf. Im Anschluss können Sie sich an unseren Projekten finanziell und ideell beteiligen.</p>
+    </div>
+</div>
+
 <p style="padding-left: 20px;"><strong><em>Machen Sie mit und gestalten Sie mit uns die Zukunft.</em> </strong> <a href="contact">Interesse? - Kontaktieren Sie uns!</a></p>
