--- a/html_pages/Projekte.html
+++ b/html_pages/Projekte.html
@@ -1,4 +1,3 @@
-
 <h3><a href="projekte/solarprojekte">Solarprojekte</a></h3>
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
@@ -14,13 +13,12 @@
     </div>
 </div>
 
-
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/4-projekt-neue-heimat-nussloch"><img src="images/images/projekt_icons/icon_neue_heimat.jpg" /></a>
+        <a href="projekte/solarprojekte/neue-heimat-nussloch"><img src="images/images/projekt_icons/icon_neue_heimat.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/4-projekt-neue-heimat-nussloch">Projekt „Neue Heimat“ in Nußloch</a></h5>
+        <h5><a href="projekte/solarprojekte/neue-heimat-nussloch">Projekt „Neue Heimat“ in Nußloch</a></h5>
         <ul style="font-size: small;">
             <li>Spitzenleistung: 445,5 Kilowatt (kWp) </li>
             <li>Stromerzeugung von rund 370.000 kWh Strom pro Jahr</li>
@@ -31,10 +29,10 @@
 
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="10-genossenschaft/27-projekt-betten-knoll"><img src="images/images/projekt_icons/icon_betten_knoll.jpg" /></a>
+        <a href="projekte/solarprojekte/betten-knoll"><img src="images/images/projekt_icons/icon_betten_knoll.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="10-genossenschaft/27-projekt-betten-knoll">Projekt „Betten Knoll“ in Rohrbach-Süd</a></h5>
+        <h5><a href="projekte/solarprojekte/betten-knoll">Projekt „Betten Knoll“ in Rohrbach-Süd</a></h5>
         <ul style="font-size: small;">
             <li>Spitzenleistung: 46,55 kWp</li>
             <li>Stromerzeugung von rund 43.000 kWh Strom pro Jahr</li>
@@ -43,14 +41,12 @@
     </div>
 </div>
 
-
-
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/6-projekt-merian-realschule-ladenburg"><img src="images/images/projekt_icons/icon_realschule_merian.jpg" /></a>
+        <a href="projekte/solarprojekte/merian-realschule-ladenburg"><img src="images/images/projekt_icons/icon_realschule_merian.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/6-projekt-merian-realschule-ladenburg">Projekt „Merian-Realschule“ in Ladenburg</a></h5>
+        <h5><a href="projekte/solarprojekte/merian-realschule-ladenburg">Projekt „Merian-Realschule“ in Ladenburg</a></h5>
         <ul style="font-size: small;">
             <li>Spitzenleistung: 58,32 kWp</li>
             <li>Stromerzeugung von rund 55.000 kWh Strom pro Jahr</li>
@@ -62,10 +58,10 @@
 
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="8-projekte/7-solar-university"><img src="images/images/projekt_icons/icon_solar_university.jpg" /></a>
+        <a href="projekte/solarprojekte/solar-university"><img src="images/images/projekt_icons/icon_solar_university.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="8-projekte/7-solar-university">Projekt „Solar-University“ an der Universität Heidelberg</a></h5>
+        <h5><a href="projekte/solarprojekte/solar-university">Projekt „Solar-University“ an der Universität Heidelberg</a></h5>
         <ul style="font-size: small;">
             <li>Spitzenleistung Anlage Hörsaal der Chemie: 72 kWp</li>
             <li>Spitzenleistung Anlage Sporthalle: 41,01 kWp</li>
@@ -75,13 +71,12 @@
     </div>
 </div>
 
-
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="8-projekte/5-projekt-eulenbis"><img src="images/images/projekt_icons/icon_eulenbis.jpg" /></a>
+        <a href="projekte/solarprojekte/eulenbis"><img src="images/images/projekt_icons/icon_eulenbis.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="8-projekte/5-projekt-eulenbis">Projekt „Eulenbis“ in der Rheinland-Pfalz</a></h5>
+        <h5><a href="projekte/solarprojekte/eulenbis">Projekt „Eulenbis“ in der Rheinland-Pfalz</a></h5>
         <ul style="font-size: small;">
             <li>Spitzenleistung: 17,48 kWp</li>
             <li>Stromerzeugung von rund 17.000 kWh pro Jahr</li>
@@ -94,10 +89,10 @@
 <h3><a href="projekte/windprojekte">Windprojekte</a></h3>
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="alle-beitraege/104-windprojekt-mit-der-solarcomplex-ag"><img src="images/images/projekt_icons/icon_solarcomplex.jpg" /></a>
+        <a href="projekte/windprojekte/windprojekt-mit-der-solarcomplex-ag"><img src="images/images/projekt_icons/icon_solarcomplex.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="alle-beitraege/104-windprojekt-mit-der-solarcomplex-ag">Windprojekt mit der solarcomplex AG</a></h5>
+        <h5><a href="projekte/windprojekte/windprojekt-mit-der-solarcomplex-ag">Windprojekt mit der solarcomplex AG</a></h5>
         <ul style="font-size: small;">
             <li>Die HEG beteiligt sich an einem Bürgerwindprojekt im Schwarzwald-Baar-Kreis.</li>
             <li>Die Beteiligung erfolgt gemeinsam mit der solarcomplex AG, einem starken Partner für die dezentrale Energiewende in Bürgerhand. </li>
@@ -105,14 +100,12 @@
     </div>
 </div>
 
-
-
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/78-windkraftprojekt-grosser-waid"><img src="images/images/projekt_icons/icon_grosser_wald.jpg" /></a>
+        <a href="projekte/windprojekte/beteiligung-grosser-wald"><img src="images/images/projekt_icons/icon_grosser_wald.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/78-windkraftprojekt-grosser-waid">Windprojekt-Beteiligung „Großer Wald“</a></h5>
+        <h5><a href="projekte/windprojekte/beteiligung-grosser-wald">Windprojekt-Beteiligung „Großer Wald“</a></h5>
         <ul style="font-size: small;">
             <li>Die Heidelberger Energiegenossenschaft unterstützt das Bürgerwindprojekt „Großer Wald“ in Hettingen/Rinschheim mit einer Beteiligung.</li>
             <li>Das Projekt ist ein echtes Bürgerprojekt und beispielhaft für die Energiewende von unten. </li>
@@ -120,7 +113,18 @@
     </div>
 </div>
 
-
+<div class="row" style="margin-bottom: 5em;">
+    <div class="span4">
+        <a href="projekte/windprojekte/windpark-greiner-eck"><img src="images/images/projekt_icons/icon_greiner-eck.jpg"/></a>
+    </div>
+    <div class="span7 offset1">
+        <h5><a href="projekte/windprojekte/windpark-greiner-eck">Windpark „Greiner Eck“</a></h5>
+        <ul style="font-size:small;">
+            <li>Die Heidelberger Energiegenossenschaft unterstützt den ersten Windpark im Kreis Bergstraße nahe Heidelberg.</li>
+            <li>Fünf Anlagen liefern einen prognostizierten Jahresertrag von 28,6 Mio Kilowattstunden.</li>
+        </ul>
+    </div>
+</div>
 
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
@@ -138,50 +142,44 @@
 </div>
 
 
-
-
-<h3><a href="projekte/weitere-projekte">weitere Projekte</a></h3>
+<h3><a href="projekte/weitere-projekte/">weitere Projekte</a></h3>
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/28-heidelberger-waeldchen"><img src="images/images/projekt_icons/icon_waeldchen.jpg" /></a>
+        <a href="projekte/weitere-projekte/heidelberger-waeldchen"><img src="images/images/projekt_icons/icon_waeldchen.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/28-heidelberger-waeldchen">Förderprojekt „Heidelberger Wäldchen“</a></h5>
+        <h5><a href="projekte/weitere-projekte/heidelberger-waeldchen">Förderprojekt „Heidelberger Wäldchen“</a></h5>
         <ul style="font-size: small;">
             <li>Finanziell unterstützen wir die Naturschutz- und Umweltorganisation APREMAVI, die Wiederaufforstungsmaßnahmen im Brasilianischen Küstenregenwald „Mata Atlântica“ ergreifen. So wächst das Heidelberger Wäldchen jeden Tag weiter in die Höhe.</li>
             <li>Doppelter Klimaschutz für unsere Solarprojekte.</li>
-            <li><a href="contact/8-projekte/28-heidelberger-waeldchen">Mehr Informationen</a></li>
         </ul>
     </div>
 </div>
 
-
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/80-mehrfamilienhausmodell-workshops-und-wissen"><img src="images/images/projekt_icons/icon_merhfamilienhaus.jpg" /></a>
+        <a href="projekte/weitere-projekte/mehrfamilienhaus-modell"><img src="images/images/projekt_icons/icon_merhfamilienhaus.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/80-mehrfamilienhausmodell-workshops-und-wissen">Mehrfamilienhausmodell: Workshops und Wissen</a></h5>
+        <h5><a href="projekte/weitere-projekte/mehrfamilienhaus-modell">Mehrfamilienhausmodell: Workshops und Wissen</a></h5>
         <ul style="font-size: small;">
             <li>Erfahren Sie hier mehr zum Projekt in Nußloch und zur Umsetzung von Photovoltaikprojekten auf Mehrfamilienhäusern.</li>
             <li>Um die Energiewende voranzubringen, stellt die HEG Erläuterungen zum Konzept frei zugänglich zur Verfügung.</li>
             <li>Mit dem Netzwerk „Energiewende jetzt“ wurde ein eigener Workshop zu diesem Thema organisiert.</li>
-            <li><a href="contact/8-projekte/80-mehrfamilienhausmodell-workshops-und-wissen">Mehr Informationen</a></li>
         </ul>
     </div>
 </div>
 
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/84-masterplan-100-klimaschutz"><img src="images/images/MasterplanKlimaschutz.png" /></a>
+        <a href="projekte/weitere-projekte/masterplan-100-klimaschutz"><img src="images/images/MasterplanKlimaschutz.png" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/84-masterplan-100-klimaschutz">Sonderprojekt „Masterplan 100% Klimaschutz“</a></h5>
+        <h5><a href="projekte/weitere-projekte/masterplan-100-klimaschutz">Sonderprojekt „Masterplan 100% Klimaschutz“</a></h5>
         <ul style="font-size: small;">
             <li>Mitarbeit beim „Masterplan 100% Klimaschutz“ im Heidelberg-Kreis für Klimaschutz und Energie sowie in Arbeitsgruppen</li>
             <li>Einbringung struktureller Anregungen sowie Erarbeitung von konkreten Maßnahmen</li>
             <li>Kritische Begleitung im Sinne einer bürgernahen, dezentralen Energiewende</li>
-            <li><a href="contact/8-projekte/84-masterplan-100-klimaschutz">Mehr Informationen</a></li>
         </ul>
     </div>
 </div>
