--- a/html_pages/Weitere_Projekte.html
+++ b/html_pages/Weitere_Projekte.html
@@ -1,11 +1,11 @@
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/28-heidelberger-waeldchen"><img src="images/images/projekt_icons/icon_waeldchen.jpg" /></a>
+        <a href="projekte/weitere-projekte/heidelberger-waeldchen"><img src="images/images/projekt_icons/icon_waeldchen.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/28-heidelberger-waeldchen">Förderprojekt „Heidelberger Wäldchen“</a></h5>
+        <h5><a href="projekte/weitere-projekte/heidelberger-waeldchen">Förderprojekt „Heidelberger Wäldchen“</a></h5>
         <ul style="font-size: small;">
-            <li>Finanziell unterstützen wir die Naturschutz- und Umweltorganisation APREMAVI, die Wiederaufforstungsmaßnahmen im Brasilianischen Küstenregenwald „Mata Atlântica“ ergreifen. So wächst das Heidelberger Wäldchen jeden Tag weiter in die Höhe.<strong></strong></li>
+            <li>Finanziell unterstützen wir die Naturschutz- und Umweltorganisation APREMAVI, die Wiederaufforstungsmaßnahmen im Brasilianischen Küstenregenwald „Mata Atlântica“ ergreifen. So wächst das Heidelberger Wäldchen jeden Tag weiter in die Höhe.</li>
             <li>Doppelter Klimaschutz für unsere Solarprojekte.</li>
         </ul>
     </div>
@@ -13,10 +13,10 @@
 
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/80-mehrfamilienhausmodell-workshops-und-wissen"><img src="images/images/projekt_icons/icon_merhfamilienhaus.jpg" /></a>
+        <a href="projekte/weitere-projekte/mehrfamilienhaus-modell"><img src="images/images/projekt_icons/icon_merhfamilienhaus.jpg" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/80-mehrfamilienhausmodell-workshops-und-wissen">Mehrfamilienhausmodell: Workshops und Wissen</a></h5>
+        <h5><a href="projekte/weitere-projekte/mehrfamilienhaus-modell">Mehrfamilienhausmodell: Workshops und Wissen</a></h5>
         <ul style="font-size: small;">
             <li>Erfahren Sie hier mehr zum Projekt in Nußloch und zur Umsetzung von Photovoltaikprojekten auf Mehrfamilienhäusern.</li>
             <li>Um die Energiewende voranzubringen, stellt die HEG Erläuterungen zum Konzept frei zugänglich zur Verfügung.</li>
@@ -27,10 +27,10 @@
 
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="contact/8-projekte/84-masterplan-100-klimaschutz"><img src="images/images/MasterplanKlimaschutz.png" /></a>
+        <a href="projekte/weitere-projekte/masterplan-100-klimaschutz"><img src="images/images/MasterplanKlimaschutz.png" /></a>
     </div>
     <div class="span7 offset1">
-        <h5><a href="contact/8-projekte/84-masterplan-100-klimaschutz">Sonderprojekt „Masterplan 100% Klimaschutz“</a></h5>
+        <h5><a href="projekte/weitere-projekte/masterplan-100-klimaschutz">Sonderprojekt „Masterplan 100% Klimaschutz“</a></h5>
         <ul style="font-size: small;">
             <li>Mitarbeit beim „Masterplan 100% Klimaschutz“ im Heidelberg-Kreis für Klimaschutz und Energie sowie in Arbeitsgruppen</li>
             <li>Einbringung struktureller Anregungen sowie Erarbeitung von konkreten Maßnahmen</li>
