Changed footer and changed team site

--- a/html_pages/Ueber_Uns.html
+++ b/html_pages/Ueber_Uns.html
@@ -19,15 +19,4 @@
 <p> </p>
 <p><strong><span style="font-size: medium;">Über uns</span> </strong></p>
 <p>Wir sind die Energiewende in Heidelberg! Ein Ziel verbindet alle Mitglieder der Energiegenossenschaft Heidelberg eG: Wir nehmen die Energiewende vor Ort selbst in die Hand und stärken dadurch nicht nur die regionale Wirtschaft, sondern bleiben politisch unabhängig und tragen aktiv zum Klimaschutz bei.</p>
-<p> </p>
-<div class="row">
-    <div class="span4">
-        <a href="ueber-uns/vorstand"><strong>Vorstand</strong></a>
-    </div>
-    <div class="span4">
-        <a href="ueber-uns/aufsichtsrat"><strong>Aufsichtsrat</strong></a>
-    </div>
-    <div class="span4">
-        <a href="ueber-uns/projektteam-mitarbeiter"><strong>Mitarbeiter &amp; Projektteam</strong></a>
-    </div>
-</div>
+<p><a href="ueber-uns/team"><strong>Erfahren Sie  mehr über unser Team</strong></a></p>
