improved small things

--- a/html_pages/Mitmachen.html
+++ b/html_pages/Mitmachen.html
@@ -1,8 +1,6 @@
 <p><strong>Was macht die Genossenschaft?</strong><br /> Die HEG Heidelberger Energiegenossenschaft eG bietet Ihnen Raum, aktiv den Wandel zum Zeitalter der regenerativen Energieversorgung mitzugestalten und zu unterstützen. In einem Netzwerk interessierter und engagierter Bürger wird jedem die Möglichkeit gegeben, sich einzubringen und von den gebündelten Kompetenzen zu profitieren. Auf diese Weise kann Nachhaltigkeit und Klimaschutz gemeinsam gelebt werden, wobei nicht zuletzt das gute Gefühl bleibt, sich für eine gute und wichtige Sache eingesetzt zu haben. Zusätzlich fördern wir ein Wiederaufforstungsprojekt im brasilianischen Regenwald.</p>
-<p> </p>
-<p><strong>Mitmachen können Sie bei uns auf unterschiedliche Weise:</strong></p>
 
-<div class="row" style="margin-bottom: 5em;">
+<div class="row" style="margin: 5em 0 5em 0;">
     <div class="span4">
         <a href="mitmachen/mitglied-werden"><img src="images/images/page_icons/icon_mitglied_werden.jpg" /></a>
     </div>
@@ -34,5 +32,3 @@
         <p style="font-size: small;">Sie können sich mit einem Darlehen direkt an Projekten der Heidelberger Energiegenossenschaft beteiligen. Alle unsere bisherigen Projekte wurden komplett von Bürgerinnen und Bürgern finanziert und diesen Weg möchten wir weiter beschreiten. Wenn Sie Interesse an einer Beteiligung haben, nehmen wir Sie gerne als Mitglied unserer Genossenschaft auf. Im Anschluss können Sie sich an unseren Projekten finanziell und ideell beteiligen.</p>
     </div>
 </div>
-
-<p style="padding-left: 20px;"><strong><em>Machen Sie mit und gestalten Sie mit uns die Zukunft.</em> </strong> <a href="contact">Interesse? - Kontaktieren Sie uns!</a></p>
