Updated some pages

--- a/html_pages/Projekte.html
+++ b/html_pages/Projekte.html
@@ -172,7 +172,7 @@
 
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
-        <a href="projekte/weitere-projekte/masterplan-100-klimaschutz"><img src="images/images/MasterplanKlimaschutz.png" /></a>
+        <a href="projekte/weitere-projekte/masterplan-100-klimaschutz"><img src="images/images/projekt_icons/icon_masterplan.jpg" /></a>
     </div>
     <div class="span7 offset1">
         <h5><a href="projekte/weitere-projekte/masterplan-100-klimaschutz">Sonderprojekt „Masterplan 100% Klimaschutz“</a></h5>
