--- a/html_pages/Team.html
+++ b/html_pages/Team.html
@@ -20,43 +20,43 @@
 <blockquote>Unser Ziel ist eine bürgerschaftlich getragene und demokratische, dezentrale Energiewende. Dafür ist eine Genossenschaft die passende Unternehmensform, denn sie ermöglicht ein hohes Maß an Mitbestimmung. Deshalb engagieren wir uns in der HEG und setzen uns dafür ein, weitere Projekte in der Region zu realisieren. Nur wenn die Dynamik für die Energiewende von den Bürgern kommt und jeder mitmacht, werden wir unser Ziel erreichen. Das mitzugestalten ist unsere Motivation und aus diesem Grund sind wir in der Heidelberger Energiegenossenschaft aktiv.</blockquote>
 <div class="row" style="text-align: center; font-size: small;">
     <div class="span4 offset1">
-        <img src="/images/images/Rainer Lange.jpg"/>
+        <img src="/images/images/ueber-uns/Rainer Lange.jpg"/>
         <p><strong><span>Rainer Lange</span></strong></p>
         <p><span><em>Aufsichtsratsvorsitzender, <br />selbstständiger PR-Unternehmer</em></span></p>
     </div>
     <div class="span4 offset2">
-        <img src="/images/images/Christoph Glaser.jpg"/>
+        <img src="/images/images/ueber-uns/Christoph Glaser.jpg"/>
         <p><span><strong>Christoph Glaser</strong></span></p>
         <p><span><em>stellvertretender Aufsichtsratsvorsitzender, <br />Kanzler der HWTK</em></span></p>
     </div>
 </div>
 <div class="row" style="text-align: center; font-size: small;">
     <div class="span4 offset1">
-        <img src="/images/images/Dietmar von Blittersdorff.jpg"/>
+        <img src="/images/images/ueber-uns/Dietmar von Blittersdorff.jpg"/>
         <p><strong><span>Dietmar Freiherr von Blittersdorff</span></strong></p>
         <p><em><span>Leiter der Fortbildungsreihe für Energiegenossenschaften</span></em></p>
     </div>
     <div class="span4 offset2">
-        <img src="/images/images/Robert Persch.jpg"/>
+        <img src="/images/images/ueber-uns/Robert Persch.jpg"/>
         <p><strong><span>Robert Persch</span></strong></p>
         <p><span><em>Energieberater der Stadt Heidelberg</em><br /></span></p>
     </div>
 </div>
 <div class="row" style="text-align: center; font-size: small;">
     <div class="span4 offset1">
-        <img src="/images/images/Tanja Wolf.jpg"/>
+        <img src="/images/images/ueber-uns/Tanja Wolf.jpg"/>
         <p><span><strong>Tanja Wolf</strong></span></p>
         <p><em><span>Ingenieurin im Elektromotorenbau <br /> </span></em></p>
     </div>
     <div class="span4 offset2">
-        <img src="/images/images/Michael Schurich.jpg"/>
+        <img src="/images/images/ueber-uns/Michael Schurich.jpg"/>
         <p><span><strong>Michael Schurich</strong></span></p>
         <p><span><em>Vorstandsvorsitzender der <br />gemeinnützigen Baugenossenschaft Speyer</em></span></p>
     </div>
 </div>
 <div class="row" style="text-align: center; font-size: small;">
     <div class="span4 offset1">
-        <img src="/images/images/Johannes Gerstner.jpg"/>
+        <img src="/images/images/ueber-uns/Johannes Gerstner.jpg"/>
         <p><span><strong>Johannes Gerstner</strong></span></p>
         <p><span><em>selbstständiger Architekt</em></span></p>
     </div>
@@ -66,7 +66,7 @@
 <h3>Unsere Mitarbeiter</h3>
 <div class="row" style="text-align: center; font-size: small;">
     <div class="span4 offset1">
-        <img src="/images/images/Kai Hock.jpg"/>
+        <img src="/images/images/ueber-uns/Kai Hock.jpg"/>
         <p><strong>Kai Hock</strong></p>
         <p><em>B.Sc. Molekulare Biotechnologie, <br /> M.A. Nonprofit- <br /> Management and Governance</em></p>
     </div>
