--- a/html_pages/Ueber_Uns.html
+++ b/html_pages/Ueber_Uns.html
@@ -5,15 +5,15 @@
 <div class="row">
     <div class="span4">
         <h4 style="text-align:center;">Unternehmensgeschichte</h4>
-        <a href="ueber-uns/unternehmensgeschichte"><img src="images/images/unternehmensgeschichte.svg.png" /></a>
+        <a href="ueber-uns/unternehmensgeschichte"><img src="images/images/ueber-uns/unternehmensgeschichte.svg.png" /></a>
     </div>
     <div class="span4">
         <h4 style="text-align:center;">Kompetenzen</h4>
-        <a href="ueber-uns/kompetenzen" rel="alternate"><img src="images/images/kompetenzen.svg.png" /></a>
+        <a href="ueber-uns/kompetenzen" rel="alternate"><img src="images/images/ueber-uns/kompetenzen.svg.png" /></a>
     </div>
     <div class="span4">
         <h4 style="text-align:center;">Partner</h4>
-        <a href="ueber-uns/partner"><img src="images/images/partner.svg.png" /></a>
+        <a href="ueber-uns/partner"><img src="images/images/ueber-uns/partner.svg.png" /></a>
     </div>
 </div>
 <p> </p>
