--- a/html_pages/Team.html
+++ b/html_pages/Team.html
@@ -71,7 +71,7 @@
         <p><em>B.Sc. Molekulare Biotechnologie, <br /> M.A. Nonprofit- <br /> Management and Governance</em></p>
     </div>
     <div class="span4 offset2">
-        <img src="/images/images/Felix Schfer.jpg"/>
+        <img src="/images/images/ueber-uns/Felix Schfer.jpg"/>
         <p><strong>Felix Schäfer</strong></p>
         <p><em>B.Sc. Physik, <br /> Universität Heidelberg</em></p>
     </div>
