--- a/html_pages/Projekte.html
+++ b/html_pages/Projekte.html
@@ -126,6 +126,7 @@
     </div>
 </div>
 
+<h3><a href="projekte/balkonmodule/">Balkonmodule</a></h3>
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
         <a href="projekte/balkonmodule"><img src="images/images/projekt_icons/icon_balkonmodul.jpg" /></a>
