added kiva to projects

--- a/html_pages/Weitere_Projekte.html
+++ b/html_pages/Weitere_Projekte.html
@@ -13,6 +13,20 @@
 
 <div class="row" style="margin-bottom: 5em;">
     <div class="span4">
+        <a href="projekte/weitere-projekte/kiva"><img src="images/images/projekt_icons/icon_kiva.jpg" /></a>
+    </div>
+    <div class="span7 offset1">
+        <h5><a href="projekte/weitere-projekte/kiva">KIVA – Die Plattform für Mikrokredite</a></h5>
+        <ul style="font-size: small;">
+            <li>Wir vergeben für jeden Haushalt der über die Heidelberger Energiegenossenschaft Strom bezieht einen Kredit von 25 Dollar über die Platform KIVA.</li>
+            <li>Unterstützt werden Projekte, die einen Bezug zu Solarenergie haben.</li>
+            <li>KIVA vergibt Mikrokredite rund um die Welt, um Menschen bei konkreten Projekten zu unterstützen und ihr Leben zu verbessern.</li>
+        </ul>
+    </div>
+</div>
+
+<div class="row" style="margin-bottom: 5em;">
+    <div class="span4">
         <a href="projekte/weitere-projekte/mehrfamilienhaus-modell"><img src="images/images/projekt_icons/icon_merhfamilienhaus.jpg" /></a>
     </div>
     <div class="span7 offset1">
