Updated sidebar design

--- a/html_modules/HEG_Waeldchen.html
+++ b/html_modules/HEG_Waeldchen.html
@@ -1,7 +1,4 @@
-<div style="padding: 2em 0;">
-    <p>Das HEG Wäldchen</p>
-    <p>ist mittlerweile auf</p>
-    <p style="font-size: xx-large; line-height: 2em;"><a href="contact/8-projekte/28-heidelberger-waeldchen"><strong>3460</strong></a></p>
-    <p>Bäumchen</p>
-    <p>angewachsen</p>
-</div>
+<a href="/aktuelles2/19-aktuelles2/75-die-heg-gewinnt-den-deutschen-solarpreis-2014">
+    <img src="/images/images/sidebar/aside_waeldchen.jpg" alt="">
+</a>
+<div>Das HEG Wäldchen ist mittlerweile auf <a href="contact/8-projekte/28-heidelberger-waeldchen"><strong>3460</strong></a> Bäumchen angewachsen</div>
