updated pages for new landing page

--- a/html_pages/Mitmachen.html
+++ b/html_pages/Mitmachen.html
@@ -1,34 +1,28 @@
-<p><strong>Was macht die Genossenschaft?</strong><br /> Die HEG Heidelberger Energiegenossenschaft eG bietet Ihnen Raum, aktiv den Wandel zum Zeitalter der regenerativen Energieversorgung mitzugestalten und zu unterstützen. In einem Netzwerk interessierter und engagierter Bürger wird jedem die Möglichkeit gegeben, sich einzubringen und von den gebündelten Kompetenzen zu profitieren. Auf diese Weise kann Nachhaltigkeit und Klimaschutz gemeinsam gelebt werden, wobei nicht zuletzt das gute Gefühl bleibt, sich für eine gute und wichtige Sache eingesetzt zu haben. Zusätzlich fördern wir ein Wiederaufforstungsprojekt im brasilianischen Regenwald.</p>
+<div class="row" style="text-align: left;">
+        <div class="span5 offset1">
+            <img src="images/images/mitmachen/Icon_6.png" />
+            <h4>Heidelberger Bürgerstrom beziehen</h4>
+            <ul>
+                <li>100% Ökostrom aus Sonnen-, Wind- und Wasserkraft</li>
+                <li>Aubau der Solarenergie in Heidelberg fördern</li>
+                <li>Sichere Versorgung durch den Bürgerwerke-Verbund</li>
+            </ul>
+            <a class="flatbutton" href="/mitmachen/buergerstrom-beziehen">Nur Bürgerstrom beziehen</a>
+        </div>
+        <div class="span5">
+            <img src="images/images/mitmachen/Icon_7.png" />
+            <h4>Gemeinsam in Solarenergie investieren</h4>
+            <ul>
+                <li>Mitgliedschaft bei der Heidelberger Energiegenossenschaft (ab 100€)</li>
+                <li>Zugang zu Investitionsmöglichkeiten in Solarprojekt in HD & Umgebung</li>
+                <li>Sichtbare Wirkung direkt vor Ort — spazieren Sie an Ihrer Anlage vorbei</li>
+            </ul>
 
-<div class="row" style="margin: 5em 0 5em 0;">
-    <div class="span4">
-        <a href="mitmachen/mitglied-werden"><img src="images/images/page_icons/icon_mitglied_werden.jpg" /></a>
+            <a class="flatbutton" href="/mitmachen/investieren">Nur in Solarenergie investieren.</a>
+        </div>
     </div>
 
-    <div class="span7 offset1">
-        <h5><a href="mitmachen/mitglied-werden">Mitglied werden</a></h5>
-        <p style="font-size: small;">Werden Sie Miteigentümer von 17 Bürgersolaranlagen, bestimmen Sie den weiteren Kurs der Heidelberger Energiegenossenschaft aktiv mit, unterstützen Sie die Energiewende in unserer Region: werden Sie Mitglied in der Heidelberger Energiegenossenschaft!</p>
+    <div class="row">
+        <div class="span6 offset3">
+        </div>
     </div>
-</div>
-
-<div class="row" style="margin-bottom: 5em;">
-    <div class="span4">
-        <a href="mitmachen/buergerstrom-beziehen"><img src="images/images/page_icons/icon_buergerstrom_beziehen.jpg" /></a>
-    </div>
-
-    <div class="span7 offset1">
-        <h5><a href="mitmachen/buergerstrom-beziehen">Heidelberger Bürgerstrom beziehen</a></h5>
-        <p style="font-size: small;">Werden Sie Teil unserer Erzeuger-Verbraucher-Gemeinschaft und beziehen auch Sie Heidelberger Bürgerstrom. Damit stärken Sie die Energiewende vor Ort und bekommen einen authentischen und qualitativ hochwertigen Ökostrom zu fairen Konditionen.</p>
-    </div>
-</div>
-
-<div class="row" style="margin-bottom: 5em;">
-    <div class="span4">
-        <a href="mitmachen/projektbeteiligung"><img src="images/images/page_icons/icon_beteiligung.jpg" /></a>
-    </div>
-
-    <div class="span7 offset1">
-        <h5><a href="mitmachen/projektbeteiligung">Beteiligung an Projekten</a></h5>
-        <p style="font-size: small;">Sie können sich mit einem Darlehen direkt an Projekten der Heidelberger Energiegenossenschaft beteiligen. Alle unsere bisherigen Projekte wurden komplett von Bürgerinnen und Bürgern finanziert und diesen Weg möchten wir weiter beschreiten. Wenn Sie Interesse an einer Beteiligung haben, nehmen wir Sie gerne als Mitglied unserer Genossenschaft auf. Im Anschluss können Sie sich an unseren Projekten finanziell und ideell beteiligen.</p>
-    </div>
-</div>
