--- a/html_pages/Team.html
+++ b/html_pages/Team.html
@@ -8,9 +8,18 @@
     <div class="span10 offset1" style="padding: 0 1em 2em;">
         <img src="/images/images/ueber-uns/vorstand.jpg"/>
         <div class="row">
-            <div class="span4"><strong>Andreas Gißler</strong></div>
-            <div class="span4"><strong>Laura Zöckler</strong></div>
-            <div class="span4"><strong>Nicolai Ferchl</strong></div>
+            <div class="span4">
+                <p><strong>Andreas Gißler</strong></p>
+                <p><em>Lehrer in Rohrbach</em></p>
+            </div>
+            <div class="span4">
+                <p><strong>Laura Zöckler</strong></p>
+                <p><em>Öffentlichkeitsarbeit bei den Bürgerwerken</em></p>
+            </div>
+            <div class="span4">
+                <p><strong>Nicolai Ferchl</strong></p>
+                <p><em>Referent für Erneuerbare Energien</em></p>
+            </div>
         </div>
     </div>
 </div>
@@ -21,25 +30,25 @@
 <div class="row" style="text-align: center; font-size: small;">
     <div class="span4 offset1">
         <img src="/images/images/ueber-uns/Rainer Lange.jpg"/>
-        <p><strong><span>Rainer Lange</span></strong></p>
-        <p><span><em>Aufsichtsratsvorsitzender, <br />selbstständiger PR-Unternehmer</em></span></p>
+        <p><strong>Rainer Lange</strong></p>
+        <p><em>Aufsichtsratsvorsitzender, <br />selbstständiger PR-Unternehmer</em></p>
     </div>
     <div class="span4 offset2">
         <img src="/images/images/ueber-uns/Christoph Glaser.jpg"/>
-        <p><span><strong>Christoph Glaser</strong></span></p>
-        <p><span><em>stellvertretender Aufsichtsratsvorsitzender, <br />Kanzler der HWTK</em></span></p>
+        <p><strong>Christoph Glaser</strong></p>
+        <p><em>stellvertretender Aufsichtsratsvorsitzender, <br />Kanzler der HWTK</em></p>
     </div>
 </div>
 <div class="row" style="text-align: center; font-size: small;">
     <div class="span4 offset1">
         <img src="/images/images/ueber-uns/Dietmar von Blittersdorff.jpg"/>
-        <p><strong><span>Dietmar Freiherr von Blittersdorff</span></strong></p>
-        <p><em><span>Leiter der Fortbildungsreihe für Energiegenossenschaften</span></em></p>
+        <p><strong>Dietmar Freiherr von Blittersdorff</strong></p>
+        <p><em>Leiter der Fortbildungsreihe für Energiegenossenschaften</em></p>
     </div>
     <div class="span4 offset2">
         <img src="/images/images/ueber-uns/Robert Persch.jpg"/>
-        <p><strong><span>Robert Persch</span></strong></p>
-        <p><span><em>Energieberater der Stadt Heidelberg</em><br /></span></p>
+        <p><strong>Robert Persch</strong></p>
+        <p><em>Energieberater der Stadt Heidelberg</em><br /></p>
     </div>
 </div>
 <div class="row" style="text-align: center; font-size: small;">
