--- a/html_pages/Mitmachen.html
+++ b/html_pages/Mitmachen.html
@@ -24,5 +24,6 @@
 
     <div class="row">
         <div class="span6 offset3">
+                <a class="flatbutton" href="/mitmachen/buergerstrom-beziehen-investieren">Jetzt Bürgerstrom beziehen und in Solarenergie investieren</a>
         </div>
     </div>
